--- a/public/scss/base/base.scss
+++ b/public/scss/base/base.scss
@@ -1,3 +1,36 @@
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Rubik', sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: $link-color;
+}
+
+img {
+  display: block;
+  width: 100%;
+}
+
+.container {
+  max-width: 1000px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.btn {
+  font-size: 16px;
+  line-height: 20px;
+  width: 100%;
+  text-align: center;
+  padding: 10px 30px;
+  text-decoration: none;
+  border-radius: 3px;
+  cursor: pointer;
 }
