--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,2 +1,8 @@
 @import './base/reset.scss';
+@import './asbstract/variables.scss';
 @import './base/base.scss';
+@import './layout/header.scss';
+@import './layout/sub-header.scss';
+@import './layout/content.scss';
+@import './layout/about-pizza.scss';
+@import './layout/footer.scss';
